Update 2016-03-25-run-app-on-linux.md